Prevent horizontal scrollbar on small screen devices

--- a/view/frontend/web/css/slick-magento.less
+++ b/view/frontend/web/css/slick-magento.less
@@ -31,6 +31,14 @@
     color: #aaa;
 }
 
+// Prevent horizontal scrollbar on small screens
+.slick-prev {
+    left: 5px;
+}
+.slick-next {
+    right: 5px;
+}
+
 .slick-dots {
     box-sizing: border-box;
     left: 50%;
